Refactor product table and filter setup to reduce duplication and clean remaining Sonar warnings